# uMMU

./: .gitignore  README.md  build-cmi-app.sh  result-enc.txt  run-cmi.sh  setup.sh  test.sh
SVF/: CMakeLists.txt  LICENSE.TXT
apps/libevent/: build.sh
apps/libmd/: .gitignore  build.sh
apps/libsodium/: .gitignore  build.sh
apps/mbedtls/: .gitignore  build.sh  run-tests.sh
apps/mbedtls/include/mbedtls/: bignum.h  config.h
apps/mbedtls/programs/: Makefile
apps/mbedtls/programs/pkey/: bench.c  result-enc.txt
apps/mbedtls/programs/test/: CMakeLists.txt  S_bignum.h  benchmark.c  eval  eval.c  eval.h  eval_key  eval_key.c  eval_rsa  eval_rsa.c
apps/memcached/: .gitignore  assoc.c  build.sh  sasl_defs.c
apps/memcached/cmi_eval/: 1  build-libmemcached.sh  build-mutilate.sh  eval-memaslap.sh  eval-memcached.sh  run_memcached_test.py  unique_words.txt
apps/memcached/cmi_eval/build-libmemcached/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cmake_install.cmake  install_manifest.txt  mem_config.h  mem_config.h.in
apps/memcached/cmi_eval/build-libmemcached/contrib/: cmake_install.cmake
apps/memcached/cmi_eval/build-libmemcached/include/: cmake_install.cmake
apps/memcached/cmi_eval/build-libmemcached/include/libhashkit-1.0/: cmake_install.cmake
apps/memcached/cmi_eval/build-libmemcached/include/libmemcached-1.0/: cmake_install.cmake  configure.h
apps/memcached/cmi_eval/build-libmemcached/include/libmemcached-1.0/struct/: cmake_install.cmake
apps/memcached/cmi_eval/build-libmemcached/include/libmemcached-1.0/types/: cmake_install.cmake
apps/memcached/cmi_eval/build-libmemcached/include/libmemcachedprotocol-0.0/: cmake_install.cmake
apps/memcached/cmi_eval/build-libmemcached/include/libmemcachedutil-1.0/: cmake_install.cmake
apps/memcached/cmi_eval/build-libmemcached/src/: cmake_install.cmake
apps/memcached/cmi_eval/build-libmemcached/src/libhashkit/: cmake_install.cmake  hashkitcon.h  libhashkit-targets.cmake  libhashkit.so.2.0.0
apps/memcached/cmi_eval/build-libmemcached/src/libmemcached/: cmake_install.cmake  libmemcached-targets.cmake  libmemcached.so.11.0.0
apps/memcached/cmi_eval/build-libmemcached/src/libmemcached/csl/: parser.cc  parser.h  parser.output  scanner.cc  scanner.h
apps/memcached/cmi_eval/build-libmemcached/src/libmemcachedprotocol/: cmake_install.cmake  libmemcachedprotocol-targets.cmake  libmemcachedprotocol.so.0.0.0
apps/memcached/cmi_eval/build-libmemcached/src/libmemcachedutil/: cmake_install.cmake  libmemcachedutil-targets.cmake  libmemcachedutil.so.2.0.0
apps/memcached/cmi_eval/build-libmemcached/src/p9y/: cmake_install.cmake
apps/memcached/cmi_eval/build-libmemcached/support/: cmake_install.cmake  libmemcached.pc
apps/memcached/cmi_eval/build-libmemcached/test/: cmake_install.cmake
apps/nbench/: nbench  pointer  sysinfo.c  sysinfoc.c
apps/nginx/: TAGS  build.sh
apps/nginx/objs/: Makefile  autoconf.err  nginx  ngx_auto_config.h  ngx_modules.c
apps/nginx/src/core/: ngx_buf.c  ngx_buf.h  ngx_connection.c
apps/nginx/src/event/modules/: ngx_epoll_module.c
apps/nginx/src/http/: ngx_http_request.c  ngx_http_request_body.c
apps/openssh-portable/: .gitignore  build.sh  includes.h  ssh-agent.c  ssh-ed25519.c  sshbuf-getput-basic.c  sshkey.c
apps/openssh-portable/openbsd-compat/: bsd-closefrom.c
apps/wolfssl/: build.sh
cmi/: .dir-locals.el  .gitignore  CMakeLists.txt  README.md  build.sh  eval-algo.sh  eval-oram.sh  eval-rdrand.sh  eval-sse-sup.sh  eval-stats.sh  my_utils.sh  run-page-size-tests.sh  run-page-tests.sh  run-tests-all.sh  run-tests-base.sh  run-tests-enc.sh  run-tests-oram-stat.sh  run-tests-salt.sh  run-tests-temp.sh  run-tests-upgt-vs-rasm.sh  run-tests.sh  setup.sh  test-oram.sh
cmi/.log/: oram-bin.csv  page.csv  qsort
cmi/aux/: calc.py  oram.c  oram.py  scratch.el  scratch.py
cmi/include/: aes.h  cmi_app_common.h  rasm.h  rdrand.h  rsort.h  test_utils.h  vmi.h  vmi_debug.h  vmi_page.h
cmi/src/: CMakeLists.txt  aes.asm  aes_xmm3.asm  cmi_aes.c  cmi_aligend.c  cmi_base.c  cmi_dummy.c  cmi_load_store_impl_use_aligned.h  cmi_oram.c  cmi_page.c  cmi_rdrand.c  cmi_vmi_page_aes.c  cmi_xor.c  cmi_xor2.c  cmi_zmm.c  fake_aes.asm  oram.c  oram.h  rasm_cmov.asm  rasm_dirjmp.asm  rasm_indjmp.asm  rasm_perm.asm  rasm_sse2_support.asm  rdrand.asm  tinyalloc.c  tinyalloc.h  ucache.asm  ucache.h  ustor.asm  vmi_linear.asm  vmi_page.c  vmi_page_swap.c  vmi_page_swap_aes.c  vmi_page_swap_base.c  vmi_page_swap_dummy.c  vmi_page_swap_oram.c  vmi_page_swap_rdrand.c  vmi_zmm.asm  vmi_zmm_fast.asm
cmi/src/tests/: micro_bench.c  test_avx.c  test_cmi.c  test_qsort.c  test_random_access.c  test_simple.c  test_vmi.c  test_vmi_page.c
cmi/src/tests/algo/: README.md
llvm-pass/: .gitignore  CMakeLists.txt  build.sh  run-anno-cmi-transform.sh  run-passes.sh  setup.sh
llvm-pass/internal/: build.sh  cmi.c  cmi.h  cmi_example.c  internal.c
llvm-pass/scripts/: aggressive-opt.sh  run_tests.sh  run_wpa_tests.sh
llvm-pass/src/: AnnoCMITransform.cpp  CMakeLists.txt  ExtractAnnotation.cpp  InstSecret.cpp  LibcTransform.cpp  PropSecret.cpp  Stats.cpp  Utils.h
llvm-pass/tests/: id_rsa  id_rsa.pub  test-ssh-agent.sh  test-ssh-keygen.sh
musl/: build.sh
tests/: gen-certs.sh  test-mbedtls.sh  test-nginx.sh  test-nginx_auth.sh  test-ssl_server2.sh
tests/data/: ca.crt  ca.key  host.crt  host.csr  host.key  nginx-auth.conf  nginx-ssl.conf  nginx.conf
tests/data/nginx/logs/: nginx.pid
